--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-page-visibility": "^6.2.0",
     "react-scripts": "3.4.1",
     "shortid": "^2.2.15"
   },
