--- a/package.json
+++ b/package.json
@@ -8,14 +8,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@splitbee/web": "^0.2.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-page-visibility": "^6.2.0",
-    "react-scripts": "3.4.1",
-    "shortid": "^2.2.15"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
