--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-page-visibility": "^6.2.0",
+    "react-rough-notation": "^1.0.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
