--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "rafaelrahal.tech",
   "version": "23.12.26",
   "description": "An Astro template for building apps.",
   "author": {
@@ -14,6 +14,7 @@
     "start": "astro dev"
   },
   "dependencies": {
+    "@astrojs/check": "^0.7.0",
     "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@radix-ui/react-slot": "^1.0.2",
@@ -27,13 +28,14 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
-    "@astrojs/check": "^0.7.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-astro": "^1.2.0",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
