--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/rollup": "^3.0.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@types/mdx": "^2.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
