--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-switch": "^1.1.0",
     "@types/mdx": "^2.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
